# ensemble

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  crew-main.toml  crew-sat-two-ai.toml  phase2-slice-b-crew.toml
.github/workflows/: ci.yml
docs/: 2026-06-19-ensemble-design.md  2026-06-21-fleet-federation-night-runbook.md  AUTONOMOUS-BACKLOG.md  FLEET-SSH-METHOD.md  RUNBOOK-live-mcp-crew.md  RUNBOOK-single-machine-team-cli.md
docs/decisions/: ADR-001-control-plane-boundary.md
docs/plans/: 2026-06-19-phase1-role-pipeline-blackboard.md  2026-06-19-phase1b-real-adapters.md  2026-06-19-phase2-worktrees-parallel-flake.md  2026-06-19-phase2c-result-persistence.md  (+17 more)
examples/: crew-phase2.toml  crew.toml  phase2-fleet.sample.json
scripts/: acceptance-single-machine.ps1  install.ps1  phantom-single-machine.ps1  phase1-verify.ps1  phase2-fleet.ps1  phase2-goal-shape.ps1  phase2-local-ready.ps1  phase2-phantom-bootstrap.ps1  phase2-run-evidence.ps1  phase2-verify.ps1  smoke.ps1  uninstall.ps1
src/: adapter.rs  agy_adapter.rs  blackboard.rs  board.rs  conductor.rs  control_plane.rs  controlled.rs  council.rs  crew.rs  discovery.rs  dispatch.rs  doctor.rs  exec_adapter.rs  gate.rs  journal.rs  ledger.rs  lib.rs  main.rs  mcp.rs  mcp_install.rs  mesh.rs  ndjson.rs  remote_adapter.rs  repo_sync.rs  serve.rs  service.rs  supervise.rs  supervisor.rs  team.rs  test_gate.rs  verdict.rs  wire.rs  worktree.rs
tests/: cross_machine.rs  firewall_b.rs  ledger_dispatch.rs  live_smoke.rs  pipeline_hermetic.rs  test_gate_e2e.rs  version_cli.rs
(+5 files in other folders)
